src/objects/System_Access_Request__c.object
<CustomObject>
    <fields>
        <fullName>Access_type__c</fullName>
        <label>Access type</label>
        <picklist>
            <picklistValues>
                <fullName>IDIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCeID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCEID_Account_Type__c</fullName>
        <label>BCEID Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCeIDorIDIR_DisplayName__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>Field displays as &quot;Surname&quot; then &quot;Given/First Name&quot;</inlineHelpText>
        <label>BCeID / IDIR Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCeIDorIDIR_Email__c</fullName>
        <encrypted>true</encrypted>
        <label>BCeID / IDIR Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCeIDorIDIR_UserName__c</fullName>
        <encrypted>true</encrypted>
        <label>BCeID / IDIR</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <formula>Case_Contact__r.Case__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case Contact</description>
        <label>Case Contact</label>
        <referenceTo>Case_Contact__c</referenceTo>
        <relationshipLabel>System Access Requests</relationshipLabel>
        <relationshipName>System_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Verification_Code__c</fullName>
        <label>Case Verification Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EIS_Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Northern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraser Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vancouver Island Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vancouver Coastal Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encrypted>true</encrypted>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Part of full name of the user requesting EIS Access</description>
        <encrypted>true</encrypted>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_City__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line1__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line2__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address Line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Postal_Code__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_Initial__c</fullName>
        <description>Part of full name of the user requesting EIS Access</description>
        <encrypted>true</encrypted>
        <label>Middle Initial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <encrypted>true</encrypted>
        <label>On Behalf Of</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portal_Access_Granted__c</fullName>
        <description>Portal Access Granted</description>
        <label>Portal Access Granted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Professional_Identifying_Number__c</fullName>
        <label>Professional Identifying Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Solution_Access__c</fullName>
        <encrypted>true</encrypted>
        <label>Reason for Collaborate Access</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RegUsers_Removal_Reason__c</fullName>
        <encrypted>true</encrypted>
        <label>Removal Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_User_Status__c</fullName>
        <label>Registered User Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Individual_if_Other__c</fullName>
        <label>Relationship to Individual (if Other)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SiteMinder_GUID__c</fullName>
        <label>SiteMinder GUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Credentials_OR_Role_Profession__c</fullName>
        <description>Be very careful when changing values of this picklist as the code is trying to match exactly with the case team role (i.e. compares the exact text of the string)</description>
        <inlineHelpText>will dictate the case team role once user created and added to case team</inlineHelpText>
        <label>User Credentials OR Role/Profession</label>
        <picklist>
            <picklistValues>
                <fullName>Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLBC Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <label>User Role</label>
        <picklist>
            <picklistValues>
                <fullName>Standard User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual/Family/Support Network</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>System Access Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>System Access Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Access Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>User_role_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Relationship_to_Individual_if_Other__c) , ISPICKVAL( User_Credentials_OR_Role_Profession__c , &apos;Other&apos;) )</errorConditionFormula>
        <errorDisplayField>Relationship_to_Individual_if_Other__c</errorDisplayField>
        <errorMessage>Please specify the other relationship</errorMessage>
    </validationRules>
</CustomObject>